--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -130,6 +130,12 @@
           </div>
         <br>
       </div>
+      <div *ngIf="this.contractRequestList.length == 0" style="min-height: 40vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+        <div style="display: table-cell;vertical-align: middle;">
+            <img src="../../../assets/img/no_data.svg" />
+            <div style="color: #94A7C6">{{'no.data' | translate}}</div>
+        </div>
+      </div>
     </div>
     </div>
   </div>
