--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
   <div class="full-height d-flex flex-row">
     <div class="left-background"></div>
     <div class="right-panel">
-      
+
       <div ngbDropdown class="d-inline-block header_language">
         <div class="social-icons" ngbDropdownToggle>
           <span class="{{ 'language_icon' | translate }}"></span>
@@ -28,7 +28,7 @@
           </button>
         </div>
       </div>
-      
+
       <div class="login-form">
         <div id="login-form">
           <div class="small-logo d-flex flex-column justify-content-center">
@@ -89,7 +89,7 @@
               </div>
 
               <div class="form-group" style="padding-top: 5px;text-align: center; font-weight: bold">
-                <h5 style="font-family: inherit;">{{'error.password.valid' | translate}}</h5>
+                <h5 style="font-family: inherit; color: #FFFFFF">{{'error.password.valid' | translate}}</h5>
             </div>
 
               <div class="form-group" style="text-align: center;">
@@ -99,7 +99,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="slogan">
         <div class="bg-footer-login">
           <div class="footer-text" style="padding-left: 1%;">
