--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -66,6 +66,14 @@
   font-weight: 700;
 }
 
+.status_blue_ceca{
+  color: #2D6BE7;
+  height: 32px;
+  display: inline-block;
+  border-radius: 4px;
+  font-weight: 700;
+}
+
 
 
 
