--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -59,6 +59,14 @@
   font-weight: 700;
 }
 
+.status_blue_ceca{
+  color: #2D6BE7;
+  height: 32px;
+  display: inline-block;
+  border-radius: 4px;
+  font-weight: 700;
+}
+
 .header {
   position: fixed;
   top: 0;
