--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -88,6 +88,17 @@
           <h3 class="label-header">{{ "package.information" | translate }}</h3>
         </div>
       </div>
+      
+      <div class="row" style="padding-bottom: 10px;">
+        <div class="col-md-12">
+          <div class="label_item">
+            {{ "time.end.date.used.service" | translate }}: 
+            <span class="highlight_result">
+              {{this.endLicense | date:'dd/MM/yyyy'}}
+            </span>
+          </div>
+        </div>
+      </div>
 
       <div class="row">
         <div class="col-md-6">
