--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -17,6 +17,14 @@
   border: 1px solid #C3D7FF;
 }
 
+.status_blue_ceca{
+  color: #2D6BE7;
+  height: 32px;
+  display: inline-block;
+  border-radius: 4px;
+  font-weight: 700;
+}
+
 .item_contract_name {
   font-weight: 500;
   font-size: 14px;
