--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -43,6 +43,31 @@
   }
 }
 
+.login_methods__title1 {
+  // margin: 24px;
+  width: 100%;
+  height: 0.5px;
+  background: var(--Neutral-05, #C6D2EA);
+  margin-bottom: 70px;
+}
+
+.end_license{
+  color: var(--Neutral-01, #001A4D);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.date_license{
+  color: var(--Status-Error, #E05050);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
 .icon_draft{
   border-radius: 6px;
   border: 0.5px solid var(--Neutral-05, #C6D2EA);
