--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -52,6 +52,12 @@
   }
 }
 
+// .header_language {
+//   position: absolute;
+//   right: 0px;
+//   padding: 5px;
+// }
+
 header {
   position: fixed;
   top: 0;
@@ -84,6 +90,24 @@ header {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+.social-language{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 3px 8px 3px 8px;
+  margin-right: 8px;
+  border: 1px solid rgba(0, 65, 196, 0.20);
+  border-radius: 3px;
+}
+
+.label-language{
+  color: var(--Primary, #0041C4);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
 }
 
 .social-icons {
@@ -154,6 +178,22 @@ h3 {
   position: fixed;
 }
 
+.drop_menu_language{
+  box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10)!important;
+  padding: 0;
+  font-size: inherit;
+  right: 0px;
+  z-index: -99;
+  position: fixed;
+}
+
+// .dropdown-menu{
+//   min-height: 5rem !important;
+// }
+
+.drop_language{
+  color: #000;
+}
 .drop {
   padding: 10px;
   color: #000;
